--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "async": "^0.9.0",
     "bluebird": "^3.4.6",
     "debug": "^3.1.0",
-    "loopback-connector": "^4.2.2",
+    "loopback-connector": "git+https://github.com/bvanleeuwen1995/loopback-connector.git",
     "pg": "^7.0.0",
     "strong-globalize": "^4.0.0",
     "uuid": "^3.0.1"
